--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "oxide.ts",
-   "version": "0.9.11",
+   "version": "1.0.0-next.2",
    "description": "Rust's Option<T> and Result<T, E>, implemented for TypeScript.",
    "exports": {
       ".": "./dist/index.js",
