--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
    },
    "dependencies": {},
    "devDependencies": {
-      "@types/chai": "^4.3.0",
+      "@types/chai": "^4.3.1",
       "@types/mocha": "^9.1.0",
-      "@typescript-eslint/eslint-plugin": "^5.10.2",
-      "@typescript-eslint/parser": "^5.10.2",
-      "typescript": "^4.5.5",
-      "eslint": "^8.8.0",
-      "mocha": "^9.2.0",
+      "@typescript-eslint/eslint-plugin": "^5.19.0",
+      "@typescript-eslint/parser": "^5.19.0",
       "chai": "^4.3.6",
+      "eslint": "^8.13.0",
+      "mocha": "^9.2.2",
       "nyc": "^15.1.0",
-      "ts-node": "^10.5.0"
+      "ts-node": "^10.7.0",
+      "typescript": "^4.6.3"
    }
 }
