--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
    "name": "oxide.ts",
    "version": "1.0.0-next.8",
    "description": "Rust's Option<T> and Result<T, E>, implemented for TypeScript.",
+   "main": "dist",
+   "types": "dist",
    "exports": {
       ".": "./dist/index.js",
       "./core": "./dist/core.js"
    },
-   "types": "dist",
    "files": [
       "dist/**/*"
    ],
