Fix exports in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "dist",
    "types": "dist",
    "exports": {
-      ".": "./dist/index.js",
+      "./dist": "./dist/index.js",
       "./core": "./dist/core.js"
    },
    "files": [
